test/__snapshots__/diagnostics/missingEffectError_plainAssignment.ts.codefixes
missingEffectError_skipNextLine from 403 to 419
missingEffectError_skipFile from 403 to 419
missingEffectError_skipNextLine from 496 to 509
missingEffectError_skipFile from 496 to 509
missingEffectError_skipNextLine from 685 to 711
missingEffectError_skipFile from 685 to 711
missingEffectError_skipNextLine from 964 to 980
missingEffectError_skipFile from 964 to 980
missingEffectError_skipNextLine from 849 to 862
missingEffectError_skipFile from 849 to 862